--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,10 @@ IF(CMAKE_INSTALL_PREFIX)
   SET(CMAKE_PREFIX_PATH "${CMAKE_INSTALL_PREFIX}" ${CMAKE_PREFIX_PATH})
 ENDIF(CMAKE_INSTALL_PREFIX)
 
-INCLUDE(GNUInstallDirs)
+IF(VERBOSE)
+  add_definitions(-DVERBOSE)
+ENDIF()
+
 #SET(THREADS_PREFER_PTHREAD_FLAG ON)
 #FIND_PACKAGE(Threads REQUIRED)
 
