improves CMakeLists to include yaml-cpp

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,9 +23,9 @@ ADD_EXECUTABLE (momentspp ${momentspp_CPP})
 SET(momentspp-targets momentspp)
 
 FOREACH (target ${momentspp-targets})
-   TARGET_LINK_LIBRARIES(${target} ${BPP_LIBS_SHARED} ${BOOST_LIBS_SHARED} ${EIGEN3_LIBS_SHARED})
-   TARGET_LINK_LIBRARIES (${target} ${LIBS})
-   #TARGET_LINK_LIBRARIES (${target} Threads::Threads)
+	TARGET_LINK_LIBRARIES(${target} ${BPP_LIBS_SHARED})
+	TARGET_LINK_LIBRARIES(${target} ${YAML_CPP_LIBRARIES})
+        #TARGET_LINK_LIBRARIES (${target} Threads::Threads)
 ENDFOREACH (target)
 
 INSTALL(TARGETS ${momentspp-targets} DESTINATION ${CMAKE_INSTALL_BINDIR})
