advances YAML parsing

--- a/debug/test.yaml
+++ b/debug/test.yaml
@@ -1,17 +1,41 @@
+description: The Gutenkunst et al. (2009) OOA model.
+doi:
+- https://doi.org/10.1371/journal.pgen.1000695
 time_units: generations
+
 demes:
-  - name: X
-    epochs:
-      - end_time: 1000
-        start_size: 2000
-  - name: A
-    ancestors: [X]
-    epochs:
-      - end_size: 2000
-  - name: B
-    ancestors: [X]
-    epochs:
-      - start_size: 2000
+- name: ancestral
+  description: Equilibrium/root population
+  epochs:
+  - {end_time: 8800, start_size: 7300}
+- name: AMH
+  description: Anatomically modern humans
+  ancestors: [ancestral]
+  epochs:
+  - {end_time: 5600, start_size: 12300}
+- name: OOA
+  description: Bottleneck out-of-Africa population
+  ancestors: [AMH]
+  epochs:
+  - {end_time: 848, start_size: 2100}
+- name: YRI
+  description: Yoruba in Ibadan, Nigeria
+  ancestors: [AMH]
+  epochs:
+  - start_size: 12300
+- name: CEU
+  description: Utah Residents (CEPH) with Northern and Western European Ancestry
+  ancestors: [OOA]
+  epochs:
+  - {start_size: 29725}
+- name: CHB
+  description: Han Chinese in Beijing, China
+  ancestors: [OOA]
+  epochs:
+  - {start_size: 54090}
+
 migrations:
-  - demes: [A, B]
-    rate: 1e-4
+- {demes: [YRI, OOA], rate: 2.5e-4}
+- {demes: [YRI, CEU], rate: 3.0e-5}
+- {demes: [YRI, CHB], rate: 1.9e-5}
+- {demes: [CEU, CHB], rate: 9.6e-5}
