--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,8 +27,8 @@ ENDIF()
 
 INCLUDE(GNUInstallDirs)
 FIND_PACKAGE(bpp-core3 1.0.0 REQUIRED)
-FIND_PACKAGE(bpp-seq3 1.0.0 REQUIRED)
-FIND_PACKAGE(bpp-phyl3 1.0.0 REQUIRED)
+#FIND_PACKAGE(bpp-seq3 1.0.0 REQUIRED)
+#FIND_PACKAGE(bpp-phyl3 1.0.0 REQUIRED)
 
 SET(Boost_USE_MULTITHREADED OFF)
 FIND_PACKAGE(Boost 1.67.0 REQUIRED COMPONENTS "iostreams")
@@ -73,9 +73,6 @@ SET(CPACK_PACKAGE_VERSION_MAJOR "0")
 SET(CPACK_PACKAGE_VERSION_MINOR "0")
 SET(CPACK_PACKAGE_VERSION_PATCH "1")
 SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "PopGen inference using two-locus statistics")
-#SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/COPYING.txt")
-#SET(CPACK_RESOURCE_FILE_AUTHORS "${CMAKE_SOURCE_DIR}/AUTHORS.txt")
-#SET(CPACK_RESOURCE_FILE_INSTALL "${CMAKE_SOURCE_DIR}/INSTALL.txt")
 SET(CPACK_SOURCE_GENERATOR "TGZ")
 # /!\ This assumes that an external build is used
 SET(CPACK_SOURCE_IGNORE_FILES 
