--- a/benchmarking/model_1.yaml
+++ b/benchmarking/model_1.yaml
@@ -3,15 +3,15 @@ demes:
   - name: X
     epochs:
       - end_time: 1500
-        start_size: 17000
+        start_size: 20000
       - end_time: 1200
-        start_size: 8000
+        start_size: 20000
       - end_time: 1000
   - name: A
     ancestors: [X]
     epochs:
       - end_time: 800
-        start_size: 30000
+        start_size: 20000
       - end_time: 500
       - end_time: 200
       - end_time: 0
@@ -21,7 +21,7 @@ demes:
       - end_time: 800
         start_size: 20000
       - end_time: 500
-      - start_size: 10000
+      - start_size: 20000
         end_time: 200
       - end_time: 0
   - name: C
@@ -29,14 +29,14 @@ demes:
     start_time: 1200
     epochs:
       - end_time: 800
-        start_size: 7500
+        start_size: 20000
       - end_time: 500
-        start_size: 12000
+        start_size: 20000
       - end_time: 0
 migrations:
-        - {source: A, dest: B, rate: 1e-3, start_time: 1000, end_time: 800}
-        - {source: B, dest: A, rate: 1e-5, start_time: 500, end_time: 200}
-        - {source: A, dest: B, rate: 1e-3, start_time: 200, end_time: 0}
+        - {source: A, dest: B, rate: 1e-4, start_time: 1000, end_time: 800}
+        - {source: B, dest: A, rate: 1e-4, start_time: 500, end_time: 200}
+        #- {source: A, dest: B, rate: 1e-4, start_time: 200, end_time: 0}
 metadata:
   mutation:
     rate: 1e-6
