--- a/debug/model_1.yaml
+++ b/debug/model_1.yaml
@@ -2,13 +2,19 @@ time_units: generations
 demes:
   - name: X
     epochs:
+      - end_time: 7000
+        start_size: 8000  
+      - end_time: 3000
+        start_size: 4000
       - end_time: 0
         start_size: 50000
 metadata:
   mutation:
-    rate: 1e-7
+    rate: 1e-6
   recombination:
     rate: 1e-5
   selection:
     rate: -1e-4
     demes: [X, Y]
+    #start_time: 7000
+    #end_time: 3000
