--- a/debug/model_1.yaml
+++ b/debug/model_1.yaml
@@ -9,12 +9,15 @@ demes:
       - end_time: 0
         start_size: 50000
 metadata:
-  mutation:
-    rate: 1e-6
-  recombination:
-    rate: 1e-5
-  selection:
-    rate: -1e-4
-    demes: [X]
-    #start_time: 7000
-    #end_time: 3000
+  - name: mutation
+    epochs:
+      - rate: 1e-6
+  - name: recombination
+    epochs:
+      - rate: 1e-5
+  - name: selection
+    start_time: 7000
+    epochs:
+      - rate: -1e-4
+        demes: [X]
+        end_time: 3000
