--- a/debug/model_2.yaml
+++ b/debug/model_2.yaml
@@ -1,17 +1,44 @@
 time_units: generations
-metadata:
-  mutation:
-    rate: 1e-7
-  recombination:
-    rate: 1e-5
-  selection:
-    rate: -1e-6
 demes:
   - name: X
     epochs:
+      - end_time: 10000
+        start_size: 20000
+  - name: A
+    ancestors: [X]
+    epochs:
+      - end_time: 5000
+        start_size: 12000
+      - end_time: 1000
       - end_time: 0
-        start_size: 5000
-  - name: Y
+  - name: B
+    ancestors: [X]
+    epochs:
+      - end_time: 5000
+        start_size: 4000
+      - end_time: 2000
+      - end_time: 0
+metadata:
+  - name: mutation
+    epochs:
+      - end_time: 10000
+        rates: [1e-7]
+      - end_time: 5000
+        rates: [1e-6, 1e-5]
+      - end_time: 2000
+        rates: [1e-6, 1e-5]
+      - end_time: 1000
+        rates: [1e-6, 1e-5]
+      - end_time: 0
+        rates: [1e-4, 1e-4]
+  - name: recombination
     epochs:
       - end_time: 0
-        start_size: 10000
+        rates: [1e-5]
+  - name: selection
+    start_time: 10000
+    epochs:
+      - end_time: 5000
+        rates: [-1e-4, -1e-5]
+      - end_time: 2000
+        rates: [-1e-3, -1e-4]
