--- a/debug/model_2.yaml
+++ b/debug/model_2.yaml
@@ -22,23 +22,37 @@ metadata:
   - name: mutation
     epochs:
       - end_time: 10000
-        rates: [1e-7]
+        rates: [1e-6]
       - end_time: 5000
-        rates: [1e-6, 1e-5]
+        rates: [1e-4, 1e-5]
       - end_time: 2000
-        rates: [1e-6, 1e-5]
+        rates: [1e-5, 1e-4]
       - end_time: 1000
         rates: [1e-6, 1e-5]
       - end_time: 0
-        rates: [1e-4, 1e-4]
+        rates: [1e-4, 1e-6]
   - name: recombination
     epochs:
-      - end_time: 0
+      - end_time: 10000
         rates: [1e-5]
+      - end_time: 5000
+        rates: [1e-6, 1e-5]
+      - end_time: 2000
+        rates: [1e-5, 1e-6]
+      - end_time: 1000
+        rates: [1e-6, 1e-4]
+      - end_time: 0
+        rates: [1e-5, 1e-3]
   - name: selection
-    start_time: 10000
+    start_time: .inf
     epochs:
+      - end_time: 10000
+        rates: [-1e-6]
       - end_time: 5000
         rates: [-1e-4, -1e-5]
       - end_time: 2000
-        rates: [-1e-3, -1e-4]
+        rates: [-1e-5, -1e-4]
+      - end_time: 1000
+        rates: [-1e-6, -1e-5]
+      - end_time: 0
+        rates: [-1e-4, -1e-6]
