--- a/debug/model_2.yaml
+++ b/debug/model_2.yaml
@@ -2,33 +2,21 @@ time_units: generations
 demes:
   - name: X
     epochs:
-      - end_time: 10000
-        start_size: 20000
-  - name: A
-    ancestors: [X]
-    epochs:
+      - end_time: 7000
+        start_size: 8000  
+      - end_time: 3000
+        start_size: 4000
       - end_time: 0
-        start_size: 12000
-  - name: B
-    ancestors: [X]
-    epochs:
-      - end_time: 0
-        start_size: 40000
+        start_size: 50000
 metadata:
   - name: mutation
     epochs:
-      - end_time: 10000
-        rates: [1e-6]
-      - end_time: 0
-        rates: [1e-7, 1e-7]
+      - rates: [1e-6]
   - name: recombination
     epochs:
-      - end_time: 10000
-        rates: [1e-5]
-      - end_time: 0
-        rates: [1e-6, 1e-5]
+      - rates: [1e-5]
   - name: selection
-    start_time: 10000
+    start_time: 7000
     epochs:
-      - end_time: 0
-        rates: [0, 0]
+      - rates: [0]
+        end_time: 3000
