--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,6 +34,7 @@ SET(momentspp-targets momentspp twoLocusSim)
 FOREACH (target ${momentspp-targets})
 	TARGET_LINK_LIBRARIES(${target} ${BPP_LIBS_SHARED})
 	TARGET_LINK_LIBRARIES(${target} ${YAML_CPP_LIBRARIES})
+	TARGET_LINK_LIBRARIES(${target} GSL::gsl GSL::gslcblas)
         #TARGET_LINK_LIBRARIES (${target} Threads::Threads)
 ENDFOREACH (target)
 
