--- a/benchmarking/selection/no_migration/model_3.yaml
+++ b/benchmarking/selection/no_migration/model_3.yaml
@@ -29,4 +29,4 @@ metadata:
       - end_time: 2000
         rates: [-5e-05]
       - end_time: 0
-        rates: [-5e-04, -5e-05]
+        rates: [-0.001, -0.00025]
