--- a/benchmarking/selection/no_migration/model_4.yaml
+++ b/benchmarking/selection/no_migration/model_4.yaml
@@ -27,6 +27,6 @@ metadata:
     start_time: .inf
     epochs:
       - end_time: 2000
-        rates: [-5e-05]
+        rates: [0]
       - end_time: 0
-        rates: [-0.001, -1e-04]
+        rates: [-0.001, -5e-04]
