--- a/debug/model_1.yaml
+++ b/debug/model_1.yaml
@@ -3,16 +3,17 @@ demes:
   - name: X
     epochs:
       - end_time: 0
-        start_size: 2000
+        start_size: 10000
 metadata:
   - name: mutation
+    left_factor: 100
     epochs:
-      - rates: [2.5e-6]
+      - rates: [1.25e-6]
   - name: recombination
     epochs:
-      - rates: [1.25e-4]
+      - rates: [1.25e-6]
   - name: selection
     start_time: .inf
     epochs:
-      - rates: [0]
+      - rates: [-1e-3]
         end_time: 0
