--- a/debug/model_1.yaml
+++ b/debug/model_1.yaml
@@ -6,14 +6,14 @@ demes:
         start_size: 10000
 metadata:
   - name: mutation
-    left_factor: 100
+    left_factor: 1
     epochs:
-      - rates: [1.25e-6]
+      - rates: [1e-6]
   - name: recombination
     epochs:
-      - rates: [1.25e-6]
+      - rates: [1e-6]
   - name: selection
     start_time: .inf
     epochs:
-      - rates: [-1e-3]
+      - rates: [0]
         end_time: 0
