--- a/debug/model_7.yaml
+++ b/debug/model_7.yaml
@@ -2,31 +2,31 @@ time_units: generations
 demes:
   - name: X
     epochs:
-      - end_time: 2000
+      - end_time: 10000
         start_size: 10000
   - name: A
     ancestors: [X]
     epochs:
       - end_time: 0
-        start_size: 10000
+        start_size: 20000
   - name: B
     ancestors: [X]
     epochs:
       - end_time: 0
-        start_size: 1000
+        start_size: 5000
 metadata:
   - name: mutation
     epochs:
       - end_time: 0
-        rates: [1e-07]
+        rates: [1e-7]
   - name: recombination
     epochs:
       - end_time: 0
-        rates: [0]
+        rates: [1e-6]
   - name: selection
     start_time: .inf
     epochs:
-      - end_time: 2000
-        rates: [-5e-05]
+      - end_time: 10000
+        rates: [-1e-4]
       - end_time: 0
-        rates: [-0.001, -5e-04]
+        rates: [-2e-5, -1e-5]
