--- a/debug/model_1a.yaml
+++ b/debug/model_1a.yaml
@@ -2,14 +2,10 @@ time_units: generations
 demes:
   - name: X
     epochs:
-      - end_time: 5000
-        start_size: 50000
       - end_time: 2500
-        start_size: 20000
-      - end_time: 1000
-        start_size: 30000
+        start_size: 50000
       - end_time: 0
-        start_size: 1000
+        start_size: 10000
 metadata:
   - name: mutation
     left_factor: 1
@@ -21,5 +17,5 @@ metadata:
   - name: selection
     start_time: .inf
     epochs:
-      - rates: [0]
+      - rates: [-2e-4]
         end_time: 0
