--- a/debug/model_1b.yaml
+++ b/debug/model_1b.yaml
@@ -3,7 +3,7 @@ demes:
   - name: X
     epochs:
       - end_time: 0
-        start_size: 1000000
+        start_size: 10000
 metadata:
   - name: mutation
     left_factor: 1
@@ -15,5 +15,5 @@ metadata:
   - name: selection
     start_time: .inf
     epochs:
-      - rates: [0]
+      - rates: [-1e-4]
         end_time: 0
