--- a/debug/model_5/model_5.yaml
+++ b/debug/model_5/model_5.yaml
@@ -3,16 +3,17 @@ demes:
   - name: X
     epochs:
       - end_time: 0
-        start_size: 10000  
+        start_size: 100000
 metadata:
   - name: mutation
+    left_factor: 1
     epochs:
-      - rates: [1e-7]
+      - rates: [1e-8]
   - name: recombination
     epochs:
-      - rates: [1e-9]
+      - rates: [1e-4]
   - name: selection
     start_time: .inf
     epochs:
-      - rates: [-1.25e-4]
+      - rates: [-0.0001]
         end_time: 0
