--- a/debug/model_1/model_1.yaml
+++ b/debug/model_1/model_1.yaml
@@ -2,10 +2,12 @@ time_units: generations
 demes:
   - name: X
     epochs:
-      - end_time: 20000
+      - end_time: 4000
         start_size: 10000
+      - end_time: 2000
+        start_size: 2000
       - end_time: 0
-        start_size: 1000
+        start_size: 20000
 metadata:
   - name: mutation
     left_factor: 1
@@ -17,5 +19,5 @@ metadata:
   - name: selection
     start_time: .inf
     epochs:
-      - rates: [-0.001]
+      - rates: [-0.000811130831]
         end_time: 0
