--- a/debug/model_2/model_2.yaml
+++ b/debug/model_2/model_2.yaml
@@ -2,18 +2,20 @@ time_units: generations
 demes:
   - name: X
     epochs:
+      - end_time: 20000
+        start_size: 100000
       - end_time: 0
         start_size: 10000
 metadata:
   - name: mutation
     left_factor: 1
     epochs:
-      - rates: [1e-8]
+      - rates: [1e-9]
   - name: recombination
     epochs:
       - rates: [1e-8]
   - name: selection
     start_time: .inf
     epochs:
-      - rates: [-0.0001]
+      - rates: [-0.001]
         end_time: 0
