--- a/debug/model_3/model_3.yaml
+++ b/debug/model_3/model_3.yaml
@@ -2,8 +2,14 @@ time_units: generations
 demes:
   - name: X
     epochs:
+      - end_time: 100000
+        start_size: 30000
+      - end_time: 24000
+        start_size: 20000
+      - end_time: 4000
+        start_size: 40000
       - end_time: 0
-        start_size: 100000
+        start_size: 15000
 metadata:
   - name: mutation
     left_factor: 1
@@ -15,5 +21,5 @@ metadata:
   - name: selection
     start_time: .inf
     epochs:
-      - rates: [-0.00001]
+      - rates: [-0.003]
         end_time: 0
