improves 2-locus sim

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,6 +35,7 @@ FOREACH (target ${momentspp-targets})
 	TARGET_LINK_LIBRARIES(${target} ${BPP_LIBS_SHARED})
 	TARGET_LINK_LIBRARIES(${target} ${YAML_CPP_LIBRARIES})
 	TARGET_LINK_LIBRARIES(${target} GSL::gsl GSL::gslcblas)
+	TARGET_LINK_LIBRARIES(${target} Boost::iostreams)
         #TARGET_LINK_LIBRARIES (${target} Threads::Threads)
 ENDFOREACH (target)
 
