updates bpp in dockerfile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,7 +85,7 @@ SET(CPACK_PACKAGE_VERSION "0.0.1")
 SET(CPACK_PACKAGE_VERSION_MAJOR "0")
 SET(CPACK_PACKAGE_VERSION_MINOR "0")
 SET(CPACK_PACKAGE_VERSION_PATCH "1")
-SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "PopGen inference using two-locus statistics")
+SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Fast and accurate prediction of two-locus statistics")
 SET(CPACK_SOURCE_GENERATOR "TGZ")
 # /!\ This assumes that an external build is used
 SET(CPACK_SOURCE_IGNORE_FILES 
